--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,23 @@
 version: '3.8'
 
 services:
-  voice-agent-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  grc-agent-squad:
+    build: .
     ports:
       - "8000:8000"
     environment:
-      - ENVIRONMENT=development
-      - AWS_PROFILE=acl-playground
-      - AWS_REGION=us-west-2
-      - REDIS_URL=redis://redis:6379
-      - API_PORT=8000
-      - API_HOST=0.0.0.0
+      - AWS_REGION=${AWS_REGION:-us-west-2}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
+      - BEDROCK_MODEL_ID=${BEDROCK_MODEL_ID:-anthropic.claude-3-haiku-20240307-v1:0}
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - DEBUG=${DEBUG:-false}
     volumes:
-      - ~/.aws:/home/appuser/.aws:ro
       - ./src:/app/src
-      - ./.env:/app/.env:ro
-    depends_on:
-      - redis
+    depends_on: []
     networks:
-      - voice-agent-network
+      - grc-agent-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -29,24 +25,6 @@ services:
       retries: 3
       start_period: 40s
 
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - voice-agent-network
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 3s
-      retries: 5
-
-volumes:
-  redis_data:
-    driver: local
-
 networks:
-  voice-agent-network:
+  grc-agent-network:
     driver: bridge 
