--- a/requirements.txt
+++ b/requirements.txt
@@ -27,10 +27,15 @@ pydantic>=2.5.0
 pydantic-settings>=2.0.0
 httpx>=0.25.0
 
+# YAML processing and validation
+PyYAML>=6.0.0
+jsonschema>=4.19.0
+
 # Development and testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
+pytest-timeout>=2.1.0
 black>=23.0.0
 isort>=5.12.0
 flake8>=6.0.0
