--- a/config/agents/empathetic_interviewer.yaml
+++ b/config/agents/empathetic_interviewer.yaml
@@ -40,11 +40,11 @@ personality:
     - "encouraging"
 
 model_settings:
-  model_id: "anthropic.claude-3-5-sonnet-20241022-v2:0"
+  model_id: "us.anthropic.claude-sonnet-4-20250514-v1:0"
   model_provider: "AWS Bedrock"
   inference_config:
     maxTokens: 4096
-    temperature: 0.7
+    temperature: 0.6
     topP: 0.9
   memory_enabled: true
   streaming: false
