--- a/config/agents/strategic_governance_executive.yaml
+++ b/config/agents/strategic_governance_executive.yaml
@@ -46,13 +46,12 @@ personality:
     - "board-savvy"
 
 model_settings:
-  model_id: "anthropic.claude-3-5-sonnet-20241022-v2:0"
+  model_id: "us.anthropic.claude-sonnet-4-20250514-v1:0"
   model_provider: "AWS Bedrock"
   inference_config:
-    maxTokens: 6144
-    temperature: 0.6
+    maxTokens: 32768
+    temperature: 0.5
     topP: 0.9
-    stopSequences: []
   memory_enabled: true
   streaming: false
   framework: "agent-squad"
