--- a/config/agents/strategic_governance.yaml
+++ b/config/agents/strategic_governance.yaml
@@ -3,19 +3,10 @@ id: strategic_governance
 name: "Sam - Governance Strategist"
 description: "Strategic governance specialist focused on governance frameworks, policy development, and board-level guidance"
 
-capabilities:
-  - question_answering
-  - voice_processing
-  - task_assistance
-  - creative_writing
-
 use_cases:
-  - "Governance framework design"
-  - "Policy development"
-  - "Board reporting"
-  - "Stakeholder engagement"
-  - "Governance maturity assessment"
-  - "Strategic planning"
+  - policy_development
+  - board_reporting
+  - stakeholder_training
 
 specialized_tools:
   - "Governance Framework Designer"
