--- a/config/agents/analytical_risk_expert.yaml
+++ b/config/agents/analytical_risk_expert.yaml
@@ -8,29 +8,14 @@ use_cases:
   - control_testing
   - incident_response
 
-specialized_tools:
-  - "Risk Assessment Matrix"
-  - "Control Effectiveness Analyzer"
-  - "Threat Modeling Tool"
-  - "Business Impact Calculator"
-  - "Risk Register Manager"
-  - "Mitigation Strategy Planner"
+tools:
+  - "highbond_token_exchange"
 
 voice_settings:
   voice_id: "Brian"
   style: "analytical"
   speed: "medium"
   pitch: "medium"
-
-personality:
-  tone: "neutral"
-  approach: "analytical"
-  communication_style: "detail-oriented and systematic"
-  traits:
-    - "analytical"
-    - "detail-oriented"
-    - "systematic"
-    - "thorough"
 
 model_settings:
   model_id: "us.anthropic.claude-sonnet-4-20250514-v1:0"
