highbond token exchange tool introduced

--- a/config/agents/authoritative_compliance_executive.yaml
+++ b/config/agents/authoritative_compliance_executive.yaml
@@ -12,7 +12,7 @@ use_cases:
   - board_reporting
 
 tools:
-  - "highbond_token_exchange"
+  - "highbond_token_exchange_api_tool"
 
 voice_settings:
   voice_id: "Matthew"
