--- a/config/agents/supervisor_grc.yaml
+++ b/config/agents/supervisor_grc.yaml
@@ -13,7 +13,7 @@ use_cases:
   - policy_development
 
 tools:
-  - "highbond_token_exchange"
+  - "highbond_token_exchange_api_tool"
 
 voice_settings:
   voice_id: "Matthew"
