--- a/config/agents/strategic_governance_executive.yaml
+++ b/config/agents/strategic_governance_executive.yaml
@@ -12,7 +12,7 @@ use_cases:
   - stakeholder_training
 
 tools:
-  - "highbond_token_exchange"
+  - "highbond_token_exchange_api_tool"
 
 voice_settings:
   voice_id: "Brian"
